--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -909,12 +909,15 @@ h2 {
   opacity: 1;
 }
 .productcard {
-  max-width: 278px;
+  max-width: 302px;
+  margin: auto;
 }
 .productcard__img {
   position: relative;
   width: 100%;
-  height: 168px;
+  height: 272px;
+  border-radius: 15px;
+  overflow: hidden;
   img {
     /* height: 100%;
 				width: initial;
@@ -968,14 +971,38 @@ h2 {
   -ms-flex-align: center;
   align-items: center;
 }
-.sliderarrows {
+.sliderarrow {
+  border: 2px solid #08105b;
+  border-radius: 15px;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+.sliderarrow:hover {
+  background: #08105b;
+  cursor: pointer;
+  svg path {
+    stroke: #fff;
+  }
+}
+.productslider__container {
+  position: relative;
 }
 .sliderarrows__left {
-  cursor: pointer;
+  position: absolute;
+  left: -20px;
+  top: 50%;
+  transform: translateX(-100%) translateY(-50%);
 }
 .sliderarrows__right {
-  margin-left: 15px;
-  cursor: pointer;
+  position: absolute;
+  right: -20px;
+  top: 50%;
+  transform: translateX(100%) translateY(-50%);
 }
 .productslider__wrapper {
 }
@@ -990,7 +1017,7 @@ h2 {
 .productcard {
 }
 .productcard__images {
-  padding: 6px 17px 6px 17px;
+  display: block;
 }
 .productcard__img {
   display: -webkit-box;
@@ -1013,13 +1040,16 @@ h2 {
 .productcard__count {
 }
 .productcard__title {
-  margin-bottom: 18px;
+  margin-bottom: 7px;
+  min-height: 48px;
+
   a {
     font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 100%;
-    color: #25344f;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+
+    color: #3a3a3a;
   }
 }
 .productcard__buy {
@@ -1046,21 +1076,8 @@ h2 {
   font-weight: 600;
   font-size: 16px;
   line-height: 19px;
-  margin-right: 11px;
-  color: rgba(52, 60, 75, 0.5);
-  position: relative;
-  &:after {
-    position: absolute;
-    content: "";
-    left: 0;
-    top: 50%;
-    right: 0;
-    border-top: 2px solid;
-    border-color: $red;
-    -webkit-transform: rotate(-8deg);
-    -ms-transform: rotate(-8deg);
-    transform: rotate(-8deg);
-  }
+  text-decoration-line: line-through;
+  color: rgba(8, 16, 91, 0.4);
 }
 .productcard__badge {
   display: inline-block;
@@ -1087,61 +1104,208 @@ h2 {
 }
 .productcard__price {
   font-style: normal;
-  font-weight: 600;
-  color: #ed1e26;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  display: flex;
+  align-items: center;
+  color: #293243;
 }
 .productcard__pricevalue {
   display: inline-block;
-  font-size: 26px;
-  line-height: 30px;
 }
 .productcard__priceunit {
   display: inline-block;
-  font-size: 16px;
-  line-height: 16px;
 }
-.productcard__button {
-}
-.productcard__info {
-  margin-top: 20px;
-}
-.productcard__infoicon {
-  display: inline-block;
-  vertical-align: middle;
-}
-.productcard__infotext {
-  padding-left: 5px;
 
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 130%;
-  display: inline-block;
-  vertical-align: middle;
-  color: #0cba7a;
+.catalog-fav {
+  position: absolute;
+  z-index: 9;
+  right: 26px;
+  top: 26px;
 }
+
+.catalog-fav svg {
+  width: 30px;
+  height: 30px;
+  transition: all 0.2s ease;
+}
+.catalog-fav svg path {
+  transition: all 0.2s ease;
+}
+
+.product-fav svg {
+  width: 35px;
+  height: 35px;
+}
+
+.catalog-item_large .image-wrap {
+  height: 529px;
+}
+
+.catalog-fav.active svg path,
+.catalog-fav:hover svg path {
+  fill: $orange;
+  stroke: #fff;
+}
+
+.product-fav.active svg path {
+  fill: $orange;
+  stroke: #fff;
+}
+.catalog-fav.active svg,
+.catalog-fav:hover svg {
+  fill: $orange;
+  stroke: #fff;
+}
+
+.product-fav.active svg {
+  fill: $orange;
+}
+
+.catalog-fav--active svg path {
+  fill: $orange;
+}
+
+.catalog-fav--active svg {
+  fill: $orange;
+}
+
+.flex.content-between {
+  color: #ff1d1d;
+}
+
+.productcard__stickers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: calc(100% - 100px);
+}
+
+.productcard__sticker {
+  margin-right: 5px;
+}
+
+.productsticker {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 88px;
+  height: 55px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.productsticker__text {
+  transform: rotate(-16.57deg);
+  padding-top: 10px;
+}
+.productsticker {
+}
+.productsticker_orange {
+  background-image: url(../img/badge_sale.svg);
+}
+.productsticker_green {
+  background-image: url(../img/badge_new.svg);
+}
+
+.productsticker_default {
+  background: #ffffff;
+  border-radius: 30px;
+  margin-top: 16px;
+  margin-left: 16px;
+  width: unset;
+  height: unset;
+  padding: 5px 8px;
+  display: flex;
+  align-items: center;
+  .productsticker_icon {
+    margin-right: 6px;
+    display: inline-block;
+  }
+  .productsticker__text {
+    padding: 0;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    transform: none;
+    color: #3a3a3a;
+  }
+}
+
+.productcard__wrapper {
+  position: relative;
+}
+
+.productcard__stickers {
+  position: absolute;
+  z-index: 9;
+  left: 8px;
+  top: 8px;
+}
+.productcard__params {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.productcard__param {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: right;
+
+  color: #535a67;
+}
+.productcard_light {
+  color: rgba(83, 90, 103, 0.4);
+}
+
 .btn {
-  background: #04a3e9;
-  border-radius: 12px;
+  background: #08105b;
+  border-radius: 15px 0px 15px 15px;
   border: none;
   text-align: center;
+  display: inline-block;
+  padding: 15px;
   img {
     margin: auto;
   }
+  &:hover {
+    opacity: 0.8;
+  }
+  &:focus {
+    opacity: 0.7;
+  }
 }
 .productcard__addtocart {
-  width: 48px;
-  height: 48px;
-  padding: 0;
+  width: 60px;
+  height: 60px;
   background-image: url(../img/addtocart.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
-.productcard__addtocart.active {
+/* .productcard__addtocart.active {
   background-image: url(../img/selected_icon.svg);
   background-repeat: no-repeat;
   background-position: center;
-}
+} */
 .btn_icon {
   width: 48px;
   height: 48px;
@@ -1156,60 +1320,7 @@ h2 {
   -ms-flex-pack: center;
   justify-content: center;
 }
-.score {
-  display: block;
-  font-size: 14px;
-  line-height: 1;
-  position: relative;
-  overflow: hidden;
-  margin-right: 5px;
-}
-.score-wrap {
-  display: inline-block;
-  position: relative;
-  line-height: 1;
-  width: 58px;
-  text-align: left;
-  font-size: 10px;
-}
-.infoicons {
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.score .stars-active {
-  color: #ffd600;
-  position: relative;
-  z-index: 10;
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  vertical-align: middle;
-}
-.score .rat-stars-active {
-  color: #ffd600;
-  position: relative;
-  z-index: 10;
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  vertical-align: middle;
-}
-.score .stars-inactive {
-  color: rgba(52, 60, 75, 0.4);
-  position: absolute;
-  top: 0px;
-  left: 0;
-  -webkit-text-stroke: initial;
-  vertical-align: middle;
-  /* overflow: hidden;
-		*/
-}
-.cardrating__value {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  visibility: hidden;
-}
+
 .fa {
   font-family: "FontAwesome";
 }
@@ -1220,19 +1331,27 @@ h2 {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 11px;
+  transform: translateY(-50%);
+  margin-left: 10px;
+  .cardrating__form {
+    display: flex;
+    align-items: center;
+    background: #ffffff;
+    border-radius: 30px;
+    padding: 3px 6px;
+  }
+
+  .cardrating__value {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+    padding-left: 2px;
+    color: #3a3a3a;
+  }
 }
-.cardrating__value {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  visibility: hidden;
-}
-.cardrating__value span {
-  left: 0;
-  position: absolute;
-  text-indent: -2000px;
-}
+
 .blockslider {
   margin: 60px 0;
 }
@@ -1290,27 +1409,30 @@ h2 {
 .swiper-pagination-bullet-active {
   background: $blue;
 }
-.productslider__slider {
+/* .productslider__slider {
   width: calc(100% + 30px);
   padding: 0 15px;
   margin-left: -15px;
   overflow: hidden;
-}
-.productslider .slick-list {
+} */
+/* .productslider .slick-list {
   overflow: visible;
-}
+} */
 .productcard__wrapper {
-  background: #ffffff;
-  border-radius: 6px;
-  padding: 26px 24px;
+  background: #f9f9f9;
+  border-radius: 15px;
+  padding: 15px 15px 20px 15px;
 }
-.productslider .productcard__wrapper {
+/* .productslider .productcard__wrapper {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 .productslider .slick-active .productcard__wrapper {
   -webkit-box-shadow: 8px 8px 40px rgba(48, 54, 64, 0.1);
   box-shadow: 8px 8px 40px rgba(48, 54, 64, 0.1);
+} */
+.productcard__content {
+  margin-bottom: 16px;
 }
 .cardrating__item {
   display: -webkit-box;
@@ -1324,7 +1446,7 @@ h2 {
   margin-bottom: -4px;
 }
 .productslider__slide {
-  padding: 40px 7px;
+  padding: 30px 0;
 }
 .productslider {
   .blockheader {
@@ -1339,7 +1461,7 @@ h2 {
 }
 .blockheader__left {
 }
-.sliderarrows {
+.sliderarrow {
 }
 .sliderarrows__left {
 }
@@ -1393,13 +1515,15 @@ h2 {
   margin-bottom: 16px;
 }
 .itemslistcard__title {
-  margin-bottom: 14px;
+  margin-bottom: 7px;
+  margin-top: 30px;
   a {
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
-    line-height: 100%;
-    color: #25344f;
+    font-size: 20px;
+    line-height: 24px;
+
+    color: #3a3a3a;
   }
 }
 .itemslistcard__info {
@@ -2489,4 +2613,21 @@ li.mainmenuLevelOne__item {
 }
 .mainbanner__content {
   max-width: 213px;
+}
+
+h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 44px;
+  /* identical to box height */
+
+  margin-bottom: 31px;
+  color: #3a3a3a;
+}
+.indexblock {
+  margin-bottom: 97px;
+}
+.pageblocksl {
+  margin-bottom: 97px;
 }
