--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1882,22 +1882,135 @@
                   <div class="reviewsblock__answer">
                     <div class="reviewsblock__header">
                       <div class="reviewsblock__info">
-                        <div class="reviewsblock__name">Анна</div>
+                        <div class="reviewsblock__name">Администрация магазина:</div>
                       </div><!-- /.reviewsblock__info -->
 
                     </div>
                     <div class="reviewsblock__content">
                       <div class="reviewsblock__text">
-                        <p>Покупаю у вас продукцию не первый год. Магазин возле метро Красногвардейская. Продавцы
-                          очень внимательные и информативные. Продукция очень качественная. Икра - икринка к икринке,
-                          вкусная. Рыба неперемороженая. Спасибо Вам большое!! Жду, когда вы сможете продавать
-                          «ледяную рыбу» (в моем детстве 80х годах она и навага лежали в магазинах «Океан» в Москве
-                          и ее никто не покупал).</p>
+                        <p>Добрый день,Анна. <br>
+                          Спасибо за обратную связь.</p>
+                      </div><!-- /.reviewsblock__text -->
+                    </div><!-- /.reviewsblock__content -->
+                  </div><!-- /.reviewsblock__answer -->
+                </div><!-- /.reviewsblock__item -->
+                <div class="reviewsblock__item">
+                  <div class="reviewsblock__review">
+                    <div class="reviewsblock__header">
+                      <div class="reviewsblock__info">
+                        <div class="reviewsblock__name">Виктория</div>
+                        <div class="reviewsblock__date">17 декабря 2022</div>
+                      </div><!-- /.reviewsblock__info -->
+
+                      <div class="reviewsblock__rating">
+                        <div class="reviewsblock__value">5</div>
+                        <span class="score">
+                          <div class="score-wrap">
+                            <span class="rat-stars-active stars-active">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                            </span>
+                            <span class="stars-inactive">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                            </span>
+                          </div>
+                        </span>
+
+                      </div><!-- /.reviewsblock__rating -->
+                    </div><!-- /.reviewsblock__header -->
+                    <div class="reviewsblock__content">
+                      <div class="reviewsblock__text">
+                        <p>Увидела рекламу сайта на автомобиле и, наверное, в первый раз в жизни решила зайти на сайт и
+                          заказать, и не прогадала. Удобный сайт, хорошие цены, хорошая служба поддержки клиента,
+                          удобная оплата, если нет терминала, можно оплатить по qr-коду. Заказала 4 позиции - тушка
+                          кижуча, икра кеты, икра горбуши и ломтики с/соленой нерки. Икра кеты вкусная, крупная. Еще уху
+                          сварили из кижуча - тоже хорошая тушка и бульон наваристый. Еще и кэшбек с первой покупки 30%
+                          - буду брать еще!</p>
+                      </div><!-- /.reviewsblock__text -->
+                    </div><!-- /.reviewsblock__content -->
+                  </div><!-- /.reviewsblock__review -->
+                  <div class="reviewsblock__answer">
+                    <div class="reviewsblock__header">
+                      <div class="reviewsblock__info">
+                        <div class="reviewsblock__name">Администрация магазина:</div>
+                      </div><!-- /.reviewsblock__info -->
+
+                    </div>
+                    <div class="reviewsblock__content">
+                      <div class="reviewsblock__text">
+                        <p>Виктория,добрый день! <br>
+                          Благодарим Вас за обратную связь. Качественная продукция и хорошее обслуживание являются
+                          приоритетами нашей работы, чтобы покупатели всегда получали приятные впечатления и
+                          гастрономические удовольствия от сотрудничества с нами. Приятных покупок!</p>
+                      </div><!-- /.reviewsblock__text -->
+                    </div><!-- /.reviewsblock__content -->
+                  </div><!-- /.reviewsblock__answer -->
+                </div><!-- /.reviewsblock__item -->
+                <div class="reviewsblock__item">
+                  <div class="reviewsblock__review">
+                    <div class="reviewsblock__header">
+                      <div class="reviewsblock__info">
+                        <div class="reviewsblock__name">Виктория</div>
+                        <div class="reviewsblock__date">17 декабря 2022</div>
+                      </div><!-- /.reviewsblock__info -->
+
+                      <div class="reviewsblock__rating">
+                        <div class="reviewsblock__value">5</div>
+                        <span class="score">
+                          <div class="score-wrap">
+                            <span class="rat-stars-active stars-active">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                              <img src="img/activestar.svg" alt="">
+                            </span>
+                            <span class="stars-inactive">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                              <img src="img/nostar.svg" alt="">
+                            </span>
+                          </div>
+                        </span>
+
+                      </div><!-- /.reviewsblock__rating -->
+                    </div><!-- /.reviewsblock__header -->
+                    <div class="reviewsblock__content">
+                      <div class="reviewsblock__text">
+                        <p>Всегда берем наборы для ухи из нерки. Берем много. Размораживаем, сортируем по размеру
+                          нарезки, потом снова замораживаем и используем при необходимости. Получается недорого и
+                          вкусно. Нерка - это уникальная рыба, абы чем не питается, не жирная, полезна для печени.</p>
+                      </div><!-- /.reviewsblock__text -->
+                    </div><!-- /.reviewsblock__content -->
+                  </div><!-- /.reviewsblock__review -->
+                  <div class="reviewsblock__answer">
+                    <div class="reviewsblock__header">
+                      <div class="reviewsblock__info">
+                        <div class="reviewsblock__name">Администрация магазина:</div>
+                      </div><!-- /.reviewsblock__info -->
+
+                    </div>
+                    <div class="reviewsblock__content">
+                      <div class="reviewsblock__text">
+                        <p>Лидия,добрый день! <br>
+                          Спасибо большое за такой приятный отзыв.</p>
                       </div><!-- /.reviewsblock__text -->
                     </div><!-- /.reviewsblock__content -->
                   </div><!-- /.reviewsblock__answer -->
                 </div><!-- /.reviewsblock__item -->
               </div><!-- /.reviewsblock__items -->
+              <div class="reviewsblock__nav">
+
+              </div><!-- /.reviewsblock__nav -->
             </div><!-- /.reviewsblock -->
           </div>
         </div>
